# loop-generation-poc

./: .gitignore  LICENSE  README.MD  pyproject.toml  requirements.txt  sample.py  train.py
configs/: config.yaml
configs/data/: dummy.yaml
configs/experiment/: rectified_flow.yaml  rectified_flow_cpu.yaml  rectified_flow_sine.yaml  v_prediction.yaml
configs/logger/: wandb.yaml
configs/model/: diffusion.yaml
src/loop_generation_poc/data/: dummy_data_module.py
src/loop_generation_poc/generation/: samplers.py
src/loop_generation_poc/models/: diffusion.py
src/loop_generation_poc/models/components/: attention.py  embeddings.py  transformer.py
tests/: test_diffusion.py  test_dummy_data.py  test_transformer.py
